dev/dedevops-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dedevops-api
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dedevops-api
  template:
    metadata:
      labels:
        app: dedevops-api
        istio.io/dataplane-mode: none
    spec:
      imagePullSecrets:
        - name: ghcr-pull
      containers:
        - name: dedevops-api
          image: ghcr.io/andre-doming/dedevops-api:sha-97a3f3d
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
