dev/dedevops-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dedevops-api
  namespace: dev
spec:
  selector:
    app: dedevops-api
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
