dev/dedevops-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dedevops-api
  namespace: dev
  annotations:
    cert-manager.io/cluster-issuer: dedevops-ca
spec:
  ingressClassName: nginx
  rules:
    - host: api.dedevops
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dedevops-api
                port:
                  number: 80
  tls:
    - hosts:
        - api.dedevops
      secretName: api-dedevops-tls
